Fix button collapsing parent container height

--- a/app/content/css/app.scss
+++ b/app/content/css/app.scss
@@ -91,6 +91,10 @@ button {
   margin-left: 10px;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 // Common Sections
 .challenges .learn-section,
 .landing .learn-section,
